<resources>
    <string name="app_name">GlobalGym</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="sign_up">Sign up</string>
    <string name="retype_password">Retype password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="app_icon">App icon</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="year_of_birth">Year of birth</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="weight">Weight</string>
    <string name="target_weight">Target Weight</string>
    <string name="proceed">Continue</string>
    <string name="country">Country</string>
    <string name="sessions">Sessions</string>
    <string name="gyms">Gyms</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="gender">Gender</string>
    <string name="profile_icon_content_description">User\'s profile icon</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="location">Location</string>
    <string name="open_hours">Open hours</string>
    <string name="gym_image">Gym image</string>
    <string name="gym_logo">Gym logo</string>
    <string name="call_icon">Call icon</string>
    <string name="website_icon">Website icon</string>
    <string name="directions">Directions</string>
    <string name="directions_icon">Directions icon</string>
    <string name="call">Call</string>
    <string name="instructors">Instructors</string>
    <string name="exercise_title_hint">Title</string>
    <string name="exercise_reps_hint" translatable="false">Reps</string>
    <string name="exercise_sets_hint" translatable="false">Sets</string>
    <string name="save_exercise">Save</string>
    <string name="delete_exercise">Delete</string>
    <string name="session_name">Session name</string>
    <string name="exercises">Exercises</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="gym_name_search_hint">Gym name</string>
    <string name="sets_resps_text">%s x %d sets</string>
    <string name="select_gym_hint">Select gym…</string>
    <string name="preferred">Preferred</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit profile</string>
    <string name="open_hours_text">Open:</string>
    <string name="select_language">Select language</string>
    <string name="general_settings">General settings</string>
    <string name="button_completed">Completed</string>
    <string name="add_session">Add session</string>
    <string name="select_gym">Select gym</string>
    <string name="about">About</string>
    <string name="version">Version: %s</string>
    <string name="developer">Developer</string>
    <string name="developer_name" translatable="false">Mark Njung\'e</string>
    <string name="developer_email" translatable="false">contact@marknjunge.com</string>
    <string name="preferred_gym">Preferred Gym</string>
    <string name="reapeat_session">Reapeat session</string>
    <string name="delete">Delete</string>
    <string name="previous_sessions">Previous sessions</string>
    <string name="suggested_sessions">Suggested sessions</string>
    <string name="search_for_gym">Search for gym...</string>
    <string name="no_internet">Unable to connect to the internet</string>
    <string name="an_error_has_occurred">An error has ocurred</string>
    <string name="location_icon">Location icon</string>
    <string name="maps">Maps</string>
    <string name="google_maps_icon" translatable="false">Google Maps Icon</string>
</resources>
