<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.gymdetail.GymDetailsActivity">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imgHeader"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/gym_image"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_launcher_background" />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="bottom"
            android:layout_margin="8dp"
            android:contentDescription="@string/gym_logo"
            app:srcCompat="@drawable/ic_logo_foreground" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvGymTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:alpha=".87"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        tools:text="Pam Colding Gym" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:alpha=".12"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layoutCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:contentDescription="@string/call_icon"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_phone" />

            <TextView
                android:id="@+id/textView8"
                style="@style/TextContent_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/call" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgWebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:contentDescription="@string/website_icon"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_website" />

            <TextView
                android:id="@+id/textView14"
                style="@style/TextContent_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/website" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutDirections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgDirections"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:contentDescription="@string/directions_icon"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_directions" />

            <TextView
                android:id="@+id/textView17"
                style="@style/TextContent_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/directions" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:alpha=".12"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/textView6"
        style="@style/TextHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/open_hours"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvOpenTime"
            style="@style/TextContent_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            tools:text="5:30 AM" />

        <TextView
            android:id="@+id/textView10"
            style="@style/TextContent_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="-"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tvCloseTime"
            style="@style/TextContent_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            tools:text="9:00 PM" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        style="@style/TextHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/phone" />

    <TextView
        android:id="@+id/tvPhone"
        style="@style/TextContent_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="0712 345 678" />

    <TextView
        android:id="@+id/textView12"
        style="@style/TextHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/website" />

    <TextView
        android:id="@+id/tvWebsite"
        style="@style/TextContent_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        tools:text="https://global-gym.herokuapp.com/" />

    <TextView
        android:id="@+id/textView16"
        style="@style/TextHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/location"/>

    <TextView
        android:id="@+id/tvAddress"
        style="@style/TextContent_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:visibility="visible"
        tools:text="Moi Avenue" />

    <TextView
        android:id="@+id/tvLocation"
        style="@style/TextContent_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="Nairobi, Kenya" />


</LinearLayout>